# deployment-tools

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  deployment-tools.code-workspace  pyproject.toml
.github/workflows/: bump-version.yaml  cli-integration-test.yaml  cli-test.yaml  dynamic-configuration-validation.yaml  lint-dc.yaml  lint-helm-charts.yaml  release-cli.yaml  syntho-release-workflow.yaml  test-lint-helm-charts.yaml
cli/: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cli/.github/workflows/: pypi-release.yaml
cli/cli/: dc_deployment.py  k8s_deployment.py  pre_build.py  releases.py  syntho_cli.py  utils.py
cli/cli/dynamic_configuration/: core.py  generate_schema.py  models.py  predefined_funcs.py
cli/cli/dynamic_configuration/schema/: question_schema.py  questions-schema.json
cli/cli/scripts/: authenticate-syntho-registry.sh  cleanup-docker-compose.sh  cleanup-kubernetes.sh  compatibility-check.sh  configuration-questions-dc.sh  configuration-questions.sh  create-offline-registry.sh  deauthenticate-syntho-registry.sh  deploy-kubernetes.sh  deploy-ray-and-syntho-stack-dc.sh  deploy-ray-and-syntho-stack.sh  download-syntho-charts-release-dc.sh  download-syntho-charts-release.sh  get-k8s-cluster-context-name.sh  k8s-deployment-preparation.sh  kubectlget.sh  major-pre-deployment-operations.sh  package-offline-registry.sh  pre-requirements-dc.sh  pre-requirements-kubernetes.sh  prepull-images.sh  update-release.sh  utils.sh  validate-prepull-images-process.sh
cli/cli/utilities/: offline_ops.py  prepull_images.py
cli/docs/: docker-compose.md  getting-started.md  kubernetes.md  utilities.md
cli/tests/: test_dynamic_configuration_core.py  test_dynamic_configuration_predefined_funcs.py  test_pre_build.py  test_syntho_cli.py  test_syntho_cli_dc.py  test_syntho_cli_k8s.py  test_utils.py
cli/tests/integration/: Dockerfile  modify_kubeconfig.py  run.sh
docker-compose/: .env  .env.tpl  Makefile  README.md  docker-compose.yaml  example.env
docker-compose/config/: images-arm.env  images-arm.env.tpl  images.env  images.env.tpl
docker-compose/nginx/: nginx.conf
dynamic-configuration/: Makefile  README.md  pyproject.toml
dynamic-configuration/src/: dc_questions.yaml  generate_schema.py  k8s_questions.yaml  models.py  questions-schema.yaml  validation.py
dynamic-configuration/src/schema/: question_schema.py  questions-schema.json
helm/config/: images.env  images.env.tpl
helm/ray/: Chart.yaml  README.md  values.yaml  values.yaml.tpl
helm/ray-v1/dependency-chart/: values.yaml  values.yaml.tpl
helm/ray/chart/: Chart.yaml  README.md  values.yaml  values.yaml.tpl
helm/ray/chart/templates/: ray-secret.yaml  raycluster-storage.yaml
helm/ray/templates/: deployment.yaml  ray_rayjob_editor_role.yaml  ray_rayjob_viewer_role.yaml  raycluster-cluster.yaml  raycluster-storage.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
helm/syntho-ui/: Chart.yaml  README.md  values.yaml  values.yaml.tpl
helm/syntho-ui/templates/: NOTES.txt  _helpers.tpl  serviceaccount.yaml
helm/syntho-ui/templates/backend/: _helper_password.tpl  backend-deployment.yaml  backend-pdb.yaml  backend-secret.yaml  backend-service.yaml
helm/syntho-ui/templates/core/: core-deployment.yaml  core-pdb.yaml  core-secret.yaml  core-service.yaml  core-worker-pod.yaml
helm/syntho-ui/templates/dbs/: database-data-1-persistentvolumeclaim.yaml  database-data-2-persistentvolumeclaim.yaml  database-deployment.yaml  database-service.yaml  dbs-pdb.yaml  postgres-deployment.yaml  postgres-service.yaml
helm/syntho-ui/templates/frontend/: frontend-deployment.yaml  frontend-ingress.yaml  frontend-pdb.yaml  frontend-service.yaml
helm/syntho-ui/templates/redis/: redis-config.yaml  redis-pdb.yaml  redis-service.yaml  redis-statefulset.yaml
helm/syntho-ui/templates/tests/: test-connection.yaml
