[tool.poetry]
name = "deployment-tools"
version = "1.10.8"
description = "Syntho deployment tools repository"
authors = [
    "Syntho B.V. <info@syntho.ai>",
    "Younes Moustaghfir <younes@syntho.ai>",
]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"
ruff = "^0.4.2"
bandit = "^1.7.8"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# E = pycodestyles (default)
# F = pyflakes (default)
# B = flake8-bugbear (extra)
# I = isort (extra)
select = ["E", "F", "B", "I"]

[tool.bandit]
exclude_dirs = ["/tests/"]
skips = [
    "B101",
    "B108",
    "B404",
    "B603",
    "B607",
]
