[tool.poetry]
name = "cli"
version = "0.5.0-dev"
description = "Syntho Stack Deployment CLI"
authors = [
    "Syntho B.V. <info@syntho.ai>",
    "Younes Moustaghfir <younes@syntho.ai>",
]
readme = "README.md"
homepage = "https://github.com/syntho-ai/syntho-cli"
repository = "https://github.com/syntho-ai/syntho-cli"
license = "MIT License"
keywords = ["syntho", "synthetic data", "deployment"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pyyaml = "^6.0.1"
watchdog = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.23.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
coverage = "^7.4.4"
ruff = "^0.4.0"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
cli = ["scripts/*.sh"]

[tool.poetry.scripts]
syntho-cli = "cli.syntho_cli:cli"

[tool.ruff]
# Same as Black.
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# E = pycodestyles (default)
# F = pyflakes (default)
# B = flake8-bugbear (extra)
# I = isort (extra)
select = ["E", "F", "B", "I"]

[tool.bandit]
exclude_dirs = ["/tests/"]
skips = [
    "B101",
    "B108",
    "B404",
    "B603",
    "B607",
]
