[tool.poetry]
name = "syntho-cli"
version = "1.10.10"
description = "Syntho Stack Deployment CLI"
authors = [
    "Syntho B.V. <info@syntho.ai>",
    "Younes Moustaghfir <younes@syntho.ai>",
]
readme = "README.md"
homepage = "https://github.com/syntho-ai/deployment-tools/tree/main/cli"
repository = "https://github.com/syntho-ai/deployment-tools"
license = "MIT License"
keywords = ["syntho", "synthetic data", "deployment"]
include = [
    "cli/scripts/*.sh",
    "cli/scripts/syntho-charts.tar.gz",
    "README.md",
    "LICENSE"
]
packages = [{include = "cli", from = "./"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pyyaml = "^6.0.1"
watchdog = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.23.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
coverage = "^7.4.4"
ruff = "^0.4.0"
bandit = "^1.7.8"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pre-build = "cli.pre_build:main"
syntho-cli = "cli.syntho_cli:cli"

[tool.ruff]
# Same as Black.
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# E = pycodestyles (default)
# F = pyflakes (default)
# B = flake8-bugbear (extra)
# I = isort (extra)
select = ["E", "F", "B", "I"]

[tool.bandit]
exclude_dirs = ["/tests/"]
skips = [
    "B101",
    "B108",
    "B404",
    "B603",
    "B607",
]
